--- a/carrito.html
+++ b/carrito.html
@@ -12,7 +12,17 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
+<section class="vistapc">
+    <header>
+
+    </header>
+    <div><img src="./imagenes/Negro y Rojo Deportes Electrónicos Ilustrativo Gaming Logo para Videojuegos.png" alt="logo empresa"></div>
+    <main>
+        Lo sentimos, la página no está disponible para tu dispositivo.
+    </main>
+</section>
 <body>
+<section class="vistamovil">
     <header>
         <section class="headerstart">
             <img id="opciones" src="./imagenes/menu_20dp_FILL0_wght400_GRAD0_opsz20.png" alt="menu">
@@ -45,34 +55,24 @@
         </main>
 
         <footer>
-                <section id="footerstart">
-                    <div>
-                        <a href="index.html"><img src="./imagenes/home_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="inicio"></a>
-                    </div>
-                    <div>
-                        <img id="cart" src="./imagenes/shopping_cart_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="carro">
-                    </div>
-                    <div>
-                        <img id="notifications" src="./imagenes/notifications_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="campana">
-                    </div>
-                    <div>
-                        <img src="./imagenes/person_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="cuenta">
-                    </div>
-                    </section>
-                    <section id="footerend">
-                    <div>
-                        <b>INICIO</b>
-                    </div>
-                    <div>
-                        <b>CARRITO</b>
-                    </div>
-                    <div>
-                        <b>AVISOS</b>
-                    </div>
-                    <div>
-                        <b>CUENTA</b>
-                    </div>
+            <section id="footerstart">
+                <div>
+                    <a href="index.html"><img src="./imagenes/home_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="inicio"></a>
+                </div>
+                <div>
+                   <a href="carrito.html"> <img id="cart" src="./imagenes/shopping_cart_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="carro"></a>
+                </div>
                 </section>
-        </footer>            
+                <section id="footerend">
+                <div>
+                    <b>INICIO</b>
+                </div>
+                <div>
+                    <b>CARRITO</b>
+                </div>
+    
+            </section>
+        </footer>  
+</section>      
 </body>
 </html>
