--- a/index.html
+++ b/index.html
@@ -93,6 +93,70 @@
                     </div>
                 </div>
               </div>
+                            <div class="card">
+                <div class="box box1">
+                  <div class="content">
+                    <img src="/imagenes/portada mother.png" />
+                    <h3 class="referencia">BOARD MSI PRO Z790-P WIFI DDR4</h3>
+                  </div>
+                </div>
+                <div class="box box2">
+                  <div class="content">
+                    <div class="precio">1.700.000,00 COP</div>
+                    <div class="comprar">
+                      <a class="botoncompra" href="articulo2.html">Mas detalles</a>
+                    </div>
+                    </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="box box1">
+                  <div class="content">
+                    <img src="/imagenes/portada mother.png" />
+                    <h3 class="referencia">BOARD MSI PRO Z790-P WIFI DDR4</h3>
+                  </div>
+                </div>
+                <div class="box box2">
+                  <div class="content">
+                    <div class="precio">1.700.000,00 COP</div>
+                    <div class="comprar">
+                      <a class="botoncompra" href="articulo2.html">Mas detalles</a>
+                    </div>
+                    </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="box box1">
+                  <div class="content">
+                    <img src="/imagenes/portada mother.png" />
+                    <h3 class="referencia">BOARD MSI PRO Z790-P WIFI DDR4</h3>
+                  </div>
+                </div>
+                <div class="box box2">
+                  <div class="content">
+                    <div class="precio">1.700.000,00 COP</div>
+                    <div class="comprar">
+                      <a class="botoncompra" href="articulo2.html">Mas detalles</a>
+                    </div>
+                    </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="box box1">
+                  <div class="content">
+                    <img src="/imagenes/portada mother.png" />
+                    <h3 class="referencia">BOARD MSI PRO Z790-P WIFI DDR4</h3>
+                  </div>
+                </div>
+                <div class="box box2">
+                  <div class="content">
+                    <div class="precio">1.700.000,00 COP</div>
+                    <div class="comprar">
+                      <a class="botoncompra" href="articulo2.html">Mas detalles</a>
+                    </div>
+                    </div>
+                </div>
+              </div>
               </section>
           </section>
         </main>
