--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport"
-    content="width=device-width, use-scalable=no, initial-scale=1.0 , maximum-scale=1.0, minimum-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Toxiczone</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -40,162 +39,42 @@
         </section>
       </header>
       <main>
-        <section id="mainstart">
-          <h1>ARTICULOS DESTACADOS</h1>
+          <h1>ARTICULOS</h1>
           <section class="container-card">
-            <div class="card">
-              <div class="box box1">
-                <div class="content">
-                  <img src="/imagenes/portada mother.png" />
-                  <div class="referencia">BOARD MSI PRO Z790-P WIFI DDR4</div>
-                </div>
-              </div>
-              <div class="box box2">
-                <div class="content">
-                  <div class="precio">1.700.000,00 COP</div>
-                  <div class="comprar">
-                    <a class="botoncompra" href="articulo2.html">Mas detalles</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="box box1">
-                <div class="content">
-                  <img src="/imagenes/portada mother.png" />
-                  <div class="referencia">BOARD MSI PRO Z790-P WIFI DDR4</div>
-                </div>
-              </div>
-              <div class="box box2">
-                <div class="content">
-                  <div class="precio">1.700.000,00 COP</div>
-                  <div class="comprar">
-                    <a class="botoncompra" href="articulo2.html">Mas detalles</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="box box1">
-                <div class="content">
-                  <img src="/imagenes/portada.png" />
-                  <div class="referencia">Procesador AMD Ryzen 7 5700G</div>
-                </div>
-              </div>
-              <div class="box box2">
-                <div class="content">
-                  <div class="precio">1.140.000,00 COP</div>
-                  <div class="comprar">
-                    <a class="botoncompra" href="articulo1.html">Mas detalles</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            </div>
-            <div class="card">
-              <div class="box box1">
-                <div class="content">
-                  <img src="/imagenes/portada.png" />
-
-                  <div class="referencia">Procesador AMD Ryzen 7 5700G</div>
-                </div>
-              </div>
-              <div class="box box2">
-                <div class="content">
-                  <div class="precio">1.140.000,00 COP</div>
-                  <div class="comprar">
-                    <a class="botoncompra" href="articulo1.html">Mas detalles</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            </div>
           </section>
-          <h1 id="ARTICULOS">ARTICULOS</h1>
-          <section class="container-card">
-            <div class="card">
-              <div class="box box1">
-                <div class="content">
-                  <img src="/imagenes/RAM.png" />
-                  <div class="referencia">
-                    Memoria RAM Vengeance LPX gamer color negro 16GB
-                  </div>
-                </div>
-              </div>
-              <div class="box box2">
-                <div class="content">
-                  <div class="precio">195.500,00 COP</div>
-                  <div class="comprar">
-                    <a class="botoncompra" href="">Mas detalles</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            </div>
-            <div class="card">
-              <div class="box box1">
-                <div class="content">
-                  <img src="/imagenes/Grafica.webp" />
-                  <div class="referencia">
-                    Tarjeta de Video RTX 4060 Ti MSI Gaming X
-                  </div>
-                </div>
-              </div>
-              <div class="box box2">
-                <div class="content">
-                  <div class="precio">2.550.000,00 COP</div>
-                  <div class="comprar">
-                    <a class="botoncompra" href="">Mas detalles</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            </div>
-            <div class="card">
-              <div class="box box1">
-                <div class="content">
-                  <img src="/imagenes/cooler.webp" />
-
-                  <div class="referencia">
-                    Refrigeración Liquida Aerocool Mirage L240 ARGB 240MM
-                  </div>
-                </div>
-              </div>
-              <div class="box box2">
-                <div class="content">
-                  <div class="precio">430.000,00 COP</div>
-                  <div class="comprar">
-                    <a class="botoncompra" href="">Mas detalles</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            </div>
-            <div class="card">
-              <div class="box box1">
-                <div class="content">
-                  <img src="/imagenes/Monitor.webp" />
-                  <div class="referencia">
-                    Monitor Janus de 32", Resolución 2K, 165 Hz, Curvo
-                  </div>
-                </div>
-              </div>
-              <div class="box box2">
-                <div class="content">
-                  <div class="precio">1.290.000,00 COP</div>
-                  <div class="comprar">
-                    <a class="botoncompra" href="">Mas detalles</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-          </section>
-        </section>
       </main>
+      <section class="contactanos">
+        <h2>Contactanos</h2>
+        <form action="send" method="get" autocomplete="on" accept-charset="on" name="Formulario Registro " target="_blank" >
+            <center>
+            <table border="0" style="width: 70%;">
+            <tbody>
+                <tr>
+                    <td><label for="username">Nombre</label></td>
+                    <td><input style="width: 98%;" type="text" name="username" id="username" required></td>
+                </tr>
+
+                <tr>       
+                    <td> <label for="email">Email</label></td>
+                    <td><input style="width: 98%;" type="email" name="email" id="email" required></td>
+                </tr>
+
+                <tr>
+                    <td> <label for="password">Telefono</label></td>
+                    <td><input  style="width: 98%;"type="tel" name="telefono" id="Telefono"   required></td>
+                </tr>
+
+                <tr>
+                    <td><label for="mensaje">Mensaje</label></td>
+                    <td colspan="3"><textarea style="width: 98%;" name="mensaje" id="Mensaje"  required> </textarea></td>
+                </tr>
+        </table>
+        <input type="submit">
+        </center>
+        </form>
     </section>
+    </section>
+<script src="script.js">
+</script>
 </body>
-</footer>
-</body>
-<script src="scripts.js"></script>
-</html>
+</html> 
