--- a/carrito.html
+++ b/carrito.html
@@ -11,54 +11,33 @@
 </head>
 <body>
     <header>
-        <section class="headerstart">
-            <img id="opciones" src="./imagenes/menu_20dp_FILL0_wght400_GRAD0_opsz20.png" alt="menu">
-            <img id="logo" src="./imagenes/Negro y Rojo Deportes Electrónicos Ilustrativo Gaming Logo para Videojuegos.png" alt="">   
-        </section>
-        <section class="headerend">
-            
-        </section>
-    </header>
- 
-        <main>
-            <h1>TU CARRITO</h1>
-            <section  class="mainstart">  
-                <section class="articulos">
-                <div class="logm"><img src="/imagenes/portada mother.png"></div><hr>
-                    <div class="carritoarticulos">
-                    <div class="referencia">BOARD MSI PRO Z790-P WIFI DDR4</div> 
-                    <div class="precio">1.700.000,00 COP</div>
-                    <div class="cantidad"> Cantidad = 1</div>
-                    <div>
-                </section>
-                <section class="articulos">
-                    <div class="logm"><img src="/imagenes/portada.png"></div><hr>
-                    <div class="carritoarticulos">
-                    <div class="referencia">Procesador AMD Ryzen 7 5700G</div>
-                    <div class="precio">1.140.000,00  COP</div>
-                    <div class="cantidad"> Cantidad = 1</div>
-                </section>
+        <section id="headercontainer">
+          <section id="headerleft">
+            <img src="./imagenes/menu_20dp_FILL0_wght400_GRAD0_opsz20.png" alt="" />
+            <h3>TOXIC ZONE</h3>
+          </section>
+          <section id="headerright">
+            <button>
+              <img src="./imagenes/search_20dp_FILL0_wght400_GRAD0_opsz20 (1).png" alt="" />
+            </button>
+            <input type="text" />
+            <section id="logocont">
+              <img src="./imagenes/Negro y Rojo Deportes Electrónicos Ilustrativo Gaming Logo para Videojuegos.png"
+                alt="" />
             </section>
-        </main>
+          </section>
+        </section>
+        <section id="TIT">
+            <p>BIENVENIDO A TU </p>
+            <p id="pred">CARRITO</p>
+          </section>
+          <main>
+            <section class="container-card">
+            </section>
+          </main>
 
-        <footer>
-            <section id="footerstart">
-                <div>
-                    <a href="index.html"><img src="./imagenes/home_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="inicio"></a>
-                </div>
-                <div>
-                   <a href="carrito.html"> <img id="cart" src="./imagenes/shopping_cart_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="carro"></a>
-                </div>
-                </section>
-                <section id="footerend">
-                <div>
-                    <b>INICIO</b>
-                </div>
-                <div>
-                    <b>CARRITO</b>
-                </div>
-    
-            </section>
-        </footer>  
 </body>
+<script src="carrito.js">
+
+</script>
 </html>
