--- a/carrito.html
+++ b/carrito.html
@@ -13,7 +13,7 @@
     <header>
         <section id="headercontainer">
           <section id="headerleft">
-            <img src="./imagenes/menu_20dp_FILL0_wght400_GRAD0_opsz20.png" alt="" />
+           <a href="index.html"> <img src="./imagenes/home_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="" /></a>
             <h3>TOXIC ZONE</h3>
           </section>
           <section id="headerright">
