--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       <header>
         <section id="headercontainer">
           <section id="headerleft">
-            <img src="./imagenes/menu_20dp_FILL0_wght400_GRAD0_opsz20.png" alt="" />
+            <a href="carrito.html"><img src="./imagenes/shopping_cart_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="" /></a>
             <h3>TOXIC ZONE</h3>
           </section>
           <section id="headerright">
-            <button>
+            <button id="btnfilter">
               <img src="./imagenes/search_20dp_FILL0_wght400_GRAD0_opsz20 (1).png" alt="" />
             </button>
-            <input type="text" />
+            <input type="text" id="filter" />
             <section id="logocont">
               <img src="./imagenes/Negro y Rojo Deportes Electrónicos Ilustrativo Gaming Logo para Videojuegos.png"
                 alt="" />
