--- a/carrito.html
+++ b/carrito.html
@@ -32,12 +32,11 @@
             <p id="pred">CARRITO</p>
           </section>
           <main>
-            <section class="container-card">
+            <section id="container-card">
             </section>
           </main>
-
+          <script src="script.js">
+          </script>
 </body>
-<script src="carrito.js">
 
-</script>
 </html>
