--- a/carrito.html
+++ b/carrito.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toxiczone</title>
-    <link rel="stylesheet" href="carrito.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
-</head>
-<body>
+    <link rel="stylesheet" href="carrito.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <section id="headercontainer">
-          <section id="headerleft">
-           <a href="index.html"> <img src="./imagenes/home_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="" /></a>
-            <h3>TOXIC ZONE</h3>
-          </section>
-          <section id="headerright">
-            <button>
-              <img src="./imagenes/search_20dp_FILL0_wght400_GRAD0_opsz20 (1).png" alt="" />
-            </button>
-            <input type="text" />
-            <section id="logocont">
-              <img src="./imagenes/Negro y Rojo Deportes Electrónicos Ilustrativo Gaming Logo para Videojuegos.png"
-                alt="" />
-            </section>
+      <section id="headercontainer">
+        <section id="headerleft">
+          <a href="index.html">
+            <img
+              src="./imagenes/home_24dp_FILL0_wght400_GRAD0_opsz24.png"
+              alt=""
+          /></a>
+          <h3>TOXIC ZONE</h3>
+        </section>
+        <section id="headerright">
+          <button>
+            <img
+              src="./imagenes/search_20dp_FILL0_wght400_GRAD0_opsz20 (1).png"
+              alt=""
+            />
+          </button>
+          <input type="text" />
+          <section id="logocont">
+            <img
+              src="./imagenes/Negro y Rojo Deportes Electrónicos Ilustrativo Gaming Logo para Videojuegos.png"
+              alt=""
+            />
           </section>
         </section>
-        <section id="TIT">
-            <p>BIENVENIDO A TU </p>
-            <p id="pred">CARRITO</p>
-          </section>
-          <main>
-            <section id="container-card">
-            </section>
-          </main>
-          <script src="script.js">
-          </script>
-</body>
+      </section>
+      <section id="TIT">
+        <p>BIENVENIDO A TU</p>
+        <p id="pred">CARRITO</p>
+      </section>
+    </header>
+    <main>
+      <section id="container-card"></section>
+      <button class="btn" id="btncmprtd">Comprar todo</button>
+    </main>
 
+    <script src="carrito.js"></script>
+  </body>
 </html>
