--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,6 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
 </head>
-
 <body>
   <section id="container">
       <header>
@@ -26,7 +24,7 @@
             <button id="btnfilter">
               <img src="./imagenes/search_20dp_FILL0_wght400_GRAD0_opsz20 (1).png" alt="" />
             </button>
-            <input type="text" id="filter" />
+            <input  type="text" id="product-search" placeholder="Buscar">
             <section id="logocont">
               <img src="./imagenes/Negro y Rojo Deportes Electrónicos Ilustrativo Gaming Logo para Videojuegos.png"
                 alt="" />
@@ -74,7 +72,7 @@
         </form>
     </section>
     </section>
-<script src="script.js">
+<script src="index.js">
 </script>
 </body>
 </html> 
